--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,10 +7,10 @@
     }
   },
   "db": {
-    "gearhost": "server=den1.mysql2.gear.host;port=3306;database=blogger3;user id=blogger3;password=student!"
+    "gearhost": "server=den1.mysql1.gear.host;port=3306;database=gregslist8;user id=gregslist8;password=Yr1ul?y39VA?"
   },
   "Auth0": {
-    "Domain": "codeworksclassroom.auth0.com",
-    "Audience": "https://codeworksclassroom.com"
+    "Domain": "dev-e05p5vq6.us.auth0.com",
+    "Audience": "https://debugapi.com"
   }
 }
